# openpi-csil

./: .gitignore  pyproject.toml
scripts/: compute_norm_stats.py  train.py
src/openpi/models/: pi0.py  pi0_fast.py
src/openpi/policies/: libero_policy.py  policy.py  robomimic_policy.py
src/openpi/training/: checkpoints.py  config.py
