[project]
name = "openpi"
version = "0.1.0"
description = "Physical Intelligence open source repo"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "augmax>=0.3.4",
    "dm-tree>=0.1.8",
    "einops>=0.8.0",
    "equinox>=0.11.8",
    "flatbuffers>=24.3.25",
    "flax==0.10.2",
    "fsspec[gcs]>=2024.6.0",
    # "gym-aloha>=0.1.1",
    "imageio>=2.36.1",
    "jax[cuda12]==0.5.3",
    "jaxtyping==0.2.36",
    "lerobot",
    "ml-collections==1.0.0",
    "numpy>=1.22.4,<2.0.0",
    "numpydantic>=1.6.6",
    "opencv-python>=4.10.0.84",
    "openpi-client",
    "orbax-checkpoint==0.11.13",
    "pillow>=11.0.0",
    "s3fs>=2024.9.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "tqdm-loggable>=0.2",
    "typing-extensions>=4.12.2",
    "tyro>=0.9.5",
    "wandb>=0.19.1",
    "boto3>=1.35.7",
    "types-boto3[boto3,s3]>=1.35.7",
    "filelock>=3.16.1",
    "beartype==0.19.0",
    "treescope>=0.1.7",
    "transformers==4.48.1",
    "rich>=14.0.0",
    "polars>=1.30.0",
    "gymnasium>=1.2.0",
    "h5py>=3.14.0",
    "mediapy>=1.2.4",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "tensorflow>=2.18.1",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-probability>=0.25.0",
    "tqdm>=4.67.1",
    "tree>=0.2.4",
    "hidapi>=0.14.0.post4",
    "mink>=0.0.11",
    "robosuite-models==1.0.0",
    "usd-core>=25.5.1",
    "datasets==3.6.0",
    "huggingface-hub>=0.29,<0.30",
    "imgaug",
    "tf-keras>=2.18.0",
    "metrx",
    "umap-learn>=0.5.9.post2",
    "scienceplots>=2.1.1",
    "tikzplotlib>=0.10.1",
    "matplotlib==3.5",
    "webcolors<24.6.0",
]


[project.urls]
Repository = "https://github.com/Physical-Intelligence/openpi"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "pynvml>=12.0.0",
]

# you need to locally clone robosuite and lerobot
# lerobot needs to be this commit 0cf864870cf29f4738d3ade893e6fd13fbd7cdb5
# robosuite is 1.5.10in my current version
# also you need to adjust the path below here

[tool.uv.sources]
lerobot = {git = "https://github.com/huggingface/lerobot.git" , rev = "0cf864870cf29f4738d3ade893e6fd13fbd7cdb5"}
openpi-client = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
    "csil",
    ".",
]

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["docker", "third_party"]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
    "B",
    "C4",
    "DTZ",
    "E4",
    "E7",
    "E9",
    "F",
    "FBT",
    "FURB",
    "I",
    "ICN",
    "ISC",
    "LOG",
    "N",
    "PD",
    "PERF",
    "PIE",
    "PLC",
    "PLE",
    "PLR1",
    "PLR5",
    "PLW",
    "PT",
    "PTH",
    "Q",
    "RET",
    "RUF",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "UP",
    "W",
]
ignore = [
    "F722",   # Conflicts with array typing.
    "T201",   # We use print statements.
    "PD008",  # Lots of false positives.
    "ISC001", # Disabling to support ruff format.
    "LOG015", # Use logger.info.
]
unfixable = [
    "B905", # Fix defaults to strict=False, which is not what we want.
]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["manual: should be run manually."]
testpaths = ["src", "scripts", "packages"]
